Flags instead of using constants, updated README.txt and upstart/neckup.conf to reflect these changes

--- a/examples/upstart/neckup.conf
+++ b/examples/upstart/neckup.conf
@@ -9,4 +9,17 @@ stop on runlevel [016]
 
 respawn
 
-exec start-stop-daemon --start -d /home/neckup/neckup --chuid neckup --exec ./neckup
+exec start-stop-daemon \
+  --start -d /home/neckup/neckup \ # neckup needs it pwd if you use relative directories for some of the flags.
+  --chuid neckup \ # Running as the neckup user, create this one if it does not exist.
+  --exec ./neckup \
+    # All these flags are optional, but you don't own "yourdomain.com", do you?
+    # There is more information for each flag if you run "./neckup --help".
+    --file_uri="http://files.yourdomain.com" \
+    --filename_len=6 \
+    --page_uri="http://yourdomain.com" \
+    --port="8080" \
+    --rand_prefix=24 \
+    --title="neckup" \
+    # --tmp_dir="/tmp" \ # neckup finds your tmp directory automagically, but feel free to change it.
+    --upload_dir="./files" # Relative to /home/neckup/neckup b/c of "-d" flag above.
