Added flag for index view

--- a/examples/upstart/neckup_seperated.conf
+++ b/examples/upstart/neckup_seperated.conf
@@ -15,6 +15,7 @@ exec start-stop-daemon --start \
 	--chuid neckup \
 	--exec ./neckup -- \
 		--file_uri="http://files.yourdomain.com" \
+    --index_view="minimal" \
 		--filename_len=6 \
 		--page_uri="http://yourdomain.com" \
 		--port="8080" \
